[project]
name = "pylnlst"
version = "0.1.1"
description = "CLI tool to automate the creation of symbolic links in a destination directory."
authors = [
    { name = "Sergio F. Gonzalez", email = "sergio.f.gonzalez@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["typer>=0.12.5"]


[project.scripts]
pylnlst = "pylnlst.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/sergiofgonzalez/pylnlst"


[tool.ruff]
# Set the maximum line length to 80
line-length = 80

[tool.ruff.lint]
ignore = [
    "D212", # Allow print statements
]

select = ["ALL"]
