[project]
name = "pylnlst"
version = "0.2.0"
description = "CLI tool to automate the creation of symbolic links in a destination directory."
authors = [
    { name = "Sergio F. Gonzalez", email = "sergio.f.gonzalez@gmail.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = ["typer>=0.14.0"]


[project.scripts]
pylnlst = "pylnlst.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/sergiofgonzalez/pylnlst"


[tool.ruff]
# Set the maximum line length to 80
line-length = 80

ignore = [
    "T201", # Allow use of print statements
]

select = ["ALL"]
